--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div id="productList" class="product_feature">
                 <div class="product_container col-sx-12 col-md-6 col-xl-3 mb-2 p-4">
 
-                    <div class="product_items ">
+                    <!-- <div class="product_items ">
                         <div class="products ">
                             <div class="product_top">
                                 <div class="img"><img src="https://cdn.tgdd.vn/Products/Images/42/114115/iphone-x-64gb-hh-600x600.jpg" alt=""></div>
@@ -148,7 +148,7 @@
                                 <div class="price"><span>85$</span></div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     
                 </div>
             </div>
