--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="item_login">
                     <div class="login">Login</div>
                     <div class="register">Register</div>
-                    <div><a href="/admin/view/Home.html">Adminnn</a></div>
+                    <div><a href="https://huydo1311.github.io/DOHUYNHTHANHHUY_ANHTAI_BC71_Baitap_Capstone_api/admin/view/Home.html">Adminnn</a></div>
                 </div>
             </div>
         </div>
